--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,9 @@
-<p>product works!</p>
+<app-navbar></app-navbar>
+<br>
+<br>
+
+<div class="mainContainer">
+    <div *ngFor="let e of emps" class="ProdcutInside"><app-productcard></app-productcard></div>
+    
+</div>
+<app-footer></app-footer>
