--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-</head>
+    <app-navbar></app-navbar>
 
-<body>
-
+    <div class=clr>
     <div class=size></div>
     <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -23,7 +14,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV_NHPAbehh4rwMX1J9SgmS0UXSrP-Gc0FbA&usqp=CAU"
+                <img src="https://assets.website-files.com/5eeb66542b4ece4b73651744/603c3d74e93d35f3fdfe07a5_napdressHEADER.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
@@ -31,7 +22,12 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuCeNrYzZUZFNuQp6QNnqT6F_IcJJuLGXlw&usqp=CAU"
+               <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuCeNrYzZUZFNuQp6QNnqT6F_IcJJuLGXlw&usqp=CAU"
+                <img src="https://images.indianexpress.com/2019/03/sabyasachi-1200.jpg"-->
+              <!--  <img src=" https://www.thehindu.com/life-and-style/fashion/yyvbkg/article30471340.ece/ALTERNATES/LANDSCAPE_615/04WK-RabanneVictor-Sabyasachi"
+                    class="d-block w-100" alt="...">-->
+
+                    <img src="https://st3.depositphotos.com/5989284/19282/i/950/depositphotos_192821452-stock-photo-portrait-horizontal-of-an-attractive.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
@@ -39,7 +35,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
+                <img src="https://imgix.bustle.com/uploads/image/2021/2/10/7026a9f2-7dbc-4078-b991-c3aa83670f87-hhh_shot4_glittercheck_part1_together_178_copy_1600x.jpg?w=653&fit=crop&crop=faces&auto=format%2Ccompress"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
@@ -60,237 +56,49 @@
     </div>
 
 
+    
+
+
 
 
 
     <div class="custom" >
-        <a  [routerLink]="['/product']" routerLinkActive="active" >
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
+        <a  [routerLink]="['/product/women']" routerLinkActive="active" >
+            <img src="https://c4.wallpaperflare.com/wallpaper/928/711/680/sophie-turner-girl-actress-garden-wallpaper-preview.jpg" class="img-fluid rounded mx-auto d-block"
+                >
+
+
+            <!--  <img src="http://49.media.tumblr.com/543fce6d28485e26ae56752fa19cfeda/tumblr_noknuv72Ho1rvekoro1_500.gif" class="img-fluid rounded mx-auto d-block"
+                >
+                
+                <img src="https://hdwallpaperim.com/wp-content/uploads/2017/08/26/181264-women_outdoors-landscape-model.jpg" class="img-fluid rounded mx-auto d-block"
+                >-->
+            </a>
+    </div>
+
+
+
+    <div class="custom" >
+        <a  [routerLink]="['/product/men']" routerLinkActive="active" >
+
+            <img src="https://expertphotography.com/wp-content/uploads/2020/05/male-poses-man-legcross.jpg" class="img-fluid rounded mx-auto d-block"
                 >
             </a>
-            
-        <div class="centered">Shop For Him</div>
-    
-    </div>
-
-    <div class="custom" >
-        <a  [routerLink]="['/product']" routerLinkActive="active" >
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
+            <!--<img src="https://expertphotography.com/wp-content/uploads/2020/05/male-poses-man-legcross.jpg" class="img-fluid rounded mx-auto d-block"
                 >
-            </a>
-            
-        <div class="centered">Shop for Her</div>
-    
-    </div>
-
-    <div class="custom" >
-        <a  [routerLink]="['/product']" routerLinkActive="active" >
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
-           >
-        </a>    
-
-        <div class="centered">Kids</div>
-    </div>
-
-    <!--<section>
-            
-        <a href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" />
-        </a>
-    
-    </section>
-    <section>
-            
-        <a href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" />
-        </a>
-    
-    </section>
-    <section>
-            
-        <a href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" />
-        </a>
-    
-    </section>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
-    <div id="carouselExampleCaptions" class="carousel slide custom-carousal " data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV_NHPAbehh4rwMX1J9SgmS0UXSrP-Gc0FbA&usqp=CAU"
-                    class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuCeNrYzZUZFNuQp6QNnqT6F_IcJJuLGXlw&usqp=CAU"
-                    class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
-                    class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            </a>-->
     </div>
 
 
+<br>
+<br>
+<br>
+<app-test></app-test>
 
-
-  <!-- .... <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-            <a href="https://www.w3schools.com">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" alt="W3Schools.com" width="100" height="132">
-                </a>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-            <a href="https://www.w3schools.com">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" alt="W3Schools.com" width="100" height="132">
-                </a>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-            <a href="https://www.w3schools.com">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU" alt="W3Schools.com" width="100" height="132">
-                </a>
-            </div>
-          </div>
-        </div>
-      </div>.......-->
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
-
-            var myCarousel = document.querySelector('#carouselExampleCaptions')
-            var carousel = new bootstrap.Carousel(myCarousel)
-
-        </script>
-
-
-</body>
-<router-outlet></router-outlet>
-</html>
-
-
-
-
-
-
-<!--<html>
-<header>
-  <nav>
-    <ul>
-    <li><a routerLink="/product" routerLinkActive="active">Shop Now</a></li> 
-  </ul>
-  </nav>
-</header>
-<router-outlet></router-outlet>
-</html>-->
-
-<!--<div class="card pos custom1" >
-    <a  [routerLink]="['/product']" routerLinkActive="active" >
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
-            class="card-img-top" alt="...">
-        </a>
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-    </div>
-
-    <div class="card-body">
-        <a href="#" class="card-link">Shop for Him</a>
-        
-    </div>
 </div>
 
-<div class="card pos custom" >
-    <a  [routerLink]="['/product']" routerLinkActive="active" >
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
-            class="card-img-top" alt="...">
-        </a>
-   <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-    </div>
+<app-footer></app-footer>
 
-    <div class="card-body">
-        <a href="#" class="card-link">Shop for Him</a>
-        
-    </div>
-</div>
-
-<div class="card pos custom" >
-    <a  [routerLink]="['/product']" routerLinkActive="active" >
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaYZYb0PTchaotaGxXek4LpKP5X1UgzPA0Eg&usqp=CAU"
-        class="card-img-top" alt="...">
-    </a>
-    
+<router-outlet></router-outlet>
 
 
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-    </div>
-
-    <div class="card-body">
-        <a href="#" class="card-link">Shop for Him</a>
-        
-    </div>
-</div>-->
