--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
     <app-navbar></app-navbar>
-
+<!--
     <div class=clr>
     <div class=size></div>
     <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
@@ -21,12 +21,12 @@
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item">-->
                <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeuCeNrYzZUZFNuQp6QNnqT6F_IcJJuLGXlw&usqp=CAU"
                 <img src="https://images.indianexpress.com/2019/03/sabyasachi-1200.jpg"-->
               <!--  <img src=" https://www.thehindu.com/life-and-style/fashion/yyvbkg/article30471340.ece/ALTERNATES/LANDSCAPE_615/04WK-RabanneVictor-Sabyasachi"
                     class="d-block w-100" alt="...">-->
-
+<!--
                     <img src="https://st3.depositphotos.com/5989284/19282/i/950/depositphotos_192821452-stock-photo-portrait-horizontal-of-an-attractive.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
@@ -57,45 +57,71 @@
 
 
     
+-->
 
 
 
 
+<mat-carousel
+timings="250ms ease-in"
+[autoplay]="true"
+interval="1500"
+color="accent"
+maxWidth="auto"
+proportion="40"
+slides="5"
 
+[loop]="true"
+[hideArrows]="false"
+[hideIndicators]="false"
+[useKeyboard]="true"
+[useMouseWheel]="false"
+orientation="ltr"
+>
+<mat-carousel-slide
+    
+    #matCarouselSlide
+  *ngFor="let slide of slides; let i = index"
+  [image]="slide.image"
+  overlayColor="#00000040"
+  [hideOverlay]="false"
+></mat-carousel-slide>
+</mat-carousel>
+
+<div class="catergoryContainer">    
     <div class="custom" >
         <a  [routerLink]="['/product/women']" routerLinkActive="active" >
-            <img src="https://c4.wallpaperflare.com/wallpaper/928/711/680/sophie-turner-girl-actress-garden-wallpaper-preview.jpg" class="img-fluid rounded mx-auto d-block"
+            <img src="https://image.shutterstock.com/image-photo/portrait-cute-little-kids-boy-260nw-1244386753.jpg" class="img-fluid rounded mx-auto d-block"
                 >
 
 
-            <!--  <img src="http://49.media.tumblr.com/543fce6d28485e26ae56752fa19cfeda/tumblr_noknuv72Ho1rvekoro1_500.gif" class="img-fluid rounded mx-auto d-block"
-                >
-                
-                <img src="https://hdwallpaperim.com/wp-content/uploads/2017/08/26/181264-women_outdoors-landscape-model.jpg" class="img-fluid rounded mx-auto d-block"
-                >-->
-            </a>
+           </a>
     </div>
 
 
+    <div class="custom" >
+        <a  [routerLink]="['/product/women']" [queryParams]= "{search:'shirt'}"routerLinkActive="active" >
+            <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c2hvcHBpbmd8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" class="img-fluid rounded mx-auto d-block">
 
+
+
+            </a>
+            
+    </div>
     <div class="custom" >
         <a  [routerLink]="['/product/men']" routerLinkActive="active" >
 
-            <img src="https://expertphotography.com/wp-content/uploads/2020/05/male-poses-man-legcross.jpg" class="img-fluid rounded mx-auto d-block"
+            <img src="https://media.istockphoto.com/photos/the-perfect-outfit-means-a-perfect-day-picture-id890289344?k=6&m=890289344&s=612x612&w=0&h=oury8nRKhxuQa9q3UInH8a4s-nVLqel0gpVr5FRLRZg=" class="img-fluid rounded mx-auto d-block"
                 >
             </a>
-            <!--<img src="https://expertphotography.com/wp-content/uploads/2020/05/male-poses-man-legcross.jpg" class="img-fluid rounded mx-auto d-block"
-                >
-            </a>-->
+    </div>
     </div>
 
-
-<br>
-<br>
-<br>
 <app-test></app-test>
+<br>
+<br>
+<br>
 
-</div>
 
 <app-footer></app-footer>
 
