--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -10,22 +10,21 @@
     display: inline-block;
 }
 */
+
 .mainContainer{
     height: 100%;
-    width: 80%;
+    width: 95%;
     position: relative;
-    margin-left: 6%;
-    margin-right: 10%;
+    margin-left: 5%;
 }
 .ProdcutInside{
-    
+    margin:0;
     position: relative;
     display: inline-block;
-    padding-left: 100px;
-    padding-bottom: 100px;
     height: 250px;
     width:300px;
-
+    margin-top: 5%;
+    
     
 }
 
