--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,9 +1,7 @@
 <app-navbar></app-navbar>
-<br>
-<br>
 
 <div class="mainContainer">
-    <div *ngFor="let e of emps" class="ProdcutInside"><app-productcard></app-productcard></div>
+    <div *ngFor="let p of prods" class="ProdcutInside"><app-productcard [prod]="p"></app-productcard></div>
     
 </div>
 <app-footer></app-footer>
