--- a/src/app/shopcart/shopcart.component.css
+++ b/src/app/shopcart/shopcart.component.css
@@ -1,8 +1,21 @@
 .thumbnail{
     margin-right: 20px;
-    margin-left: 100px;
+    margin-left: 20px;
   }
 
   .headprod{
-      margin-left: 100px;
+
+       padding-left: 8%;
+  }
+
+  col-sm-12 col-md-10 col-md-offset-1{
+      margin-left: 10%;
+      
+  }
+
+  .EmptyCart{
+      width: 100%;
+  }
+  .EmptyCartImg{
+    width: 100%;
   }
