--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,6 @@
     background-color: crimson;
     color: #fff;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
