--- a/src/app/productcard/productcard.component.html
+++ b/src/app/productcard/productcard.component.html
@@ -1,33 +1,33 @@
 
 <div class="wrapper">
-    <div class="container">
+  <div class="container">
 
 
-      <div class="top"  style="background: url({{prod.image}}) no-repeat  center center ;background-size:cover;"></div>
+    <div class="top"  style="background: url({{prod.image}}) no-repeat  center center ;background-size:cover;"></div>
 
 
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <div class="title">
-                <a  [routerLink]="['/detail']" routerLinkActive="active" class="dropdown-item"><p>{{prod.name}}</p></a>
-                
-            </div>
-            <div class="price">
-                <a  [routerLink]="['/detail']" routerLinkActive="active" class="dropdown-item"><p>{{prod.price}}</p></a>
-            </div>
-            
+    <div class="bottom">
+      <div class="left">
+        <div class="details">
+          <div class="title">
+              <a  [routerLink]="['/detail/'+prod.pid]" routerLinkActive="active" class="dropdown-item"><p>{{prod.name}}</p></a>
+              
           </div>
-          <div class="buy"><i class="material-icons" (click)="AddToCart()">add_shopping_cart</i></div>
-        </div>
-        <div class="right">
-          <div class="done"><i class="material-icons">done</i></div>
-          <div class="details">
-            
-            <p>Added to your cart</p>
+          <div class="price">
+              <a  [routerLink]="['/detail/'+prod.pid]" routerLinkActive="active" class="dropdown-item"><p>₹{{prod.price}}</p></a>
           </div>
-          <div class="remove"><i class="material-icons" (click)="RemoveFromCart()">clear</i></div>
+          
         </div>
+        <div class="buy"><i class="material-icons" (click)="AddToCart()">add_shopping_cart</i></div>
+      </div>
+      <div class="right">
+        <div class="done"><i class="material-icons">done</i></div>
+        <div class="details">
+          
+          <p>Added to your cart</p>
+        </div>
+        <div class="remove"><i class="material-icons" (click)="RemoveFromCart()">clear</i></div>
       </div>
     </div>
   </div>
+</div>
