--- a/src/app/productdetail/productdetail.component.css
+++ b/src/app/productdetail/productdetail.component.css
@@ -47,7 +47,9 @@ h2 {
 }
 
 img {
-  width: 50%;
+  margin-left: 40px;
+  width: 35%;
+  height: 70%;
   margin-top: 10px;
 }
 
@@ -88,7 +90,7 @@ img {
 .desc {
   text-transform: none;
   letter-spacing: 0;
-  margin-bottom: 17px;
+  margin-bottom: 10%;
   color: #4E4E4E;
   font-size: 16px;
   line-height: 1.6em;
@@ -96,29 +98,27 @@ img {
   text-align: justify;
 }
 
-button {
+.mainButton {
  /* background: darken( #E0C9CB, 10%);*/
   background: #d3a2a2;
   background: #BA7E7E;
   padding: 10px;
-  display: inline-block;
   outline: 0;
   border: 0;
-  margin: 10px;
+  margin: 0;
   border-radius: 2px;
   text-transform: uppercase;
   letter-spacing: 1px;
   color: #F5F5F5;
   cursor: pointer;
-  height:50px;
-  width:300px;
+  height:12%;
+  width:50%;
   margin-top:77px;
-
+  display: inline-flexbox;
 }
-  button:hover {
+.mainButton:hover {
    background: #BA7E7E;
    background: #db6666;
-    
     transition: all .4s ease-in-out;
     transform: scale(1.05);
   }
@@ -173,3 +173,29 @@ button {
 }
 
 
+form{
+  width: 120px;
+  height: 30px;
+}
+form .minus{
+  padding-left: 15px;
+  
+  border-color: #BA7E7E;
+  width: 40px;
+  display: inline-flex;
+  background-color:  #BA7E7E  ;
+  height: 30px;
+}
+form .plus{
+  padding-left: 13px;
+  border-color: #BA7E7E;
+  width: 40px;
+  display: inline-flex;
+  background-color:  #BA7E7E;
+  height: 30px;
+}
+form input{
+  padding-left: 13px;
+  margin-top: 2px;
+  width: 40px;
+}
