--- a/src/app/productdetail/productdetail.component.html
+++ b/src/app/productdetail/productdetail.component.html
@@ -1,8 +1,9 @@
 <app-navbar></app-navbar>
 
-<div class="container">
+<div class="container" >
     <div class="images">
-      <img src="http://mistillas.cl/wp-content/uploads/2018/04/Nike-Epic-React-Flyknit-%E2%80%9CPearl-Pink%E2%80%9D-01.jpg" />
+      
+      <img src= {{image}}/>
     </div>
     <div class="slideshow-buttons">
       <div class="one"></div>
@@ -21,15 +22,28 @@
       
     </div>
     <div class="product">
-      <p>Women's Running Shoe</p>
-      <h1>Nike Epic React Flyknit</h1>
-      <h2>$150</h2>
-      <p class="desc">The Nike Epic React Flyknit foam cushioning is responsive yet light-weight, durable yet soft. This creates a sensation that not only enhances the feeling of moving forward, but makes running feel fun, too.</p>
-      <div class="buttons">
-        <button class="add">Add to Cart</button>
+      
+      <p>{{prod.gender}}'s {{prod.mainCategory}}</p>
+      <h1>{{prod.name}}</h1>
+      <h2>₹{{prod.price}}</h2>
+      <p class="desc">{{prod.description}}</p>
+      <br>
+      <label>Quantity:</label>
+      <form #quant="ngForm">
         
-      </div>
+        <button class="minus" (click)="decrease()">-</button>
+        <input name="quantity" matInput type="text" required value="quantity" id='quantity' placeholder=1 min="1" max="5"onkeydown="return false" [(ngModel)]='qty'>
+        <button class="plus" (click)="increase()">+</button>
+        
+    </form>
+    <div class="buttons">
+      <button *ngIf="visibilty" class="mainButton" (click)="AddToCart()" id="addCart">Add To Cart</button>
+      <button *ngIf="!visibilty" class="mainButton" (click)="RemoveFromCart()" id="removeCart">Remove From Cart</button>
+
+      
     </div>
+    </div>
+    
   </div>
   
   
