--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,13 @@
     color: #fff;
 }
 .red{
+    
     background-color: crimson;
     color: #fff;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
