--- a/src/app/adminlogin/adminlogin.component.html
+++ b/src/app/adminlogin/adminlogin.component.html
@@ -1,13 +1,25 @@
-<div class="form-container sign-in-container">
-    <form #SignIn="ngForm">
-        <h1>Sign in</h1>
+<div class="wrap">
+    <div class="header">
+        <span>Admin Login</span>    
+    </div>
 
-        <input type="email" placeholder="Email" name="name" required #name="ngModel" [(ngModel)]=login.email/>
-        <div *ngIf="name.invalid && (name.dirty || name.touched)" class=error>Please enter data</div>
-        
-        <input type="password" placeholder="Password" name="password" required [(ngModel)]=login.password/>
-        <a href="#">Forgot your password?</a>
-        
-        <button [disabled]="SignIn.invalid" (click)="OnLogin()">Sign In</button>
+<div class="form-container sign-in-container custom">
+
+
+    <form #SignIn="ngForm">
+
+        <div>
+            <input type="email" placeholder="Email" name="name" required #name="ngModel" [(ngModel)]=login.email /><br><br>
+            <div *ngIf="name.invalid && (name.dirty || name.touched)" class=error>Please enter data</div>
+
+            <input type="password" placeholder="Password" name="password" required [(ngModel)]=login.password /><br><br>
+            
+        </div>
+
+        <div class="login">
+            <button [disabled]="SignIn.invalid" (click)="OnLogin()">Sign In</button>
+        </div>
+
     </form>
+</div>
 </div>
