--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,10 +1,15 @@
+<div class="wrap">
+
+    <div class="header">
+        <span>Admin DashBoard</span>    
+    </div>
 
 <div class="container-lg">
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
-                    <div class="col-sm-8"><h2>Employee <b>Details</b></h2></div>
+                    <div class="col-sm-8"><h2>Product <b>Details</b></h2></div>
                     <div class="col-sm-4">
                     <a [routerLink]="['/add']" routerLinkActive="active">
                         <button type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New</button>
@@ -48,6 +53,7 @@
         </div>
     </div>
 </div>    
+</div>
 <router-outlet></router-outlet>
 
 
