--- a/src/app/admin3/admin3.component.html
+++ b/src/app/admin3/admin3.component.html
@@ -1,51 +1,72 @@
-<h1>Add Product</h1>
-
 <div class="wrap">
-<form #addform="ngForm" (ngSubmit)="onSubmitadd(addform.value)">
 
+  <div class="header">
+    <span>Add Product</span>
+  </div>
+
+  <div class="container">
     <div class="row">
-        <div class="col-md-6">
-          
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text"  class="form-control" name="name"  ngModel required />
-            </div>
+      <div class="col-md-7">
+        <form #addform="ngForm" (ngSubmit)="onSubmitadd(addform.value)">
 
-            <div class="form-group ">
-                <label>Description</label>
-                <input type="text"  class="form-control" name="desc"  ngModel required />
-            </div>
 
-            <div class="form-group ">
-                <label>Price</label>
-                <input type="number"  class="form-control" name="price"  ngModel required />
-            </div>
 
-            <div class="form-group ">
-                <label>Image</label>
-                <input type="text" class="form-control" name="image"  ngModel required />
-            </div>
+          <div class="form-group custom">
+            <label>Name</label>
+            <input type="text" class="form-control" name="name" ngModel required />
+          </div>
 
-            <div class="form-group ">
-                <label>Gender</label>
-                <input type="text" class="form-control" name="gender" ngModel required />
-            </div>
+          <div class="form-group custom ">
+            <label>Description</label>
+            <input type="text" class="form-control" name="description" ngModel required />
+          </div>
 
-            <div class="form-group ">
-                <label>Category</label>
-                <input type="text" class="form-control" name="category"  ngModel required />
-            </div>
+          <div class="form-group custom ">
+            <label>Price</label>
+            <input type="number" class="form-control" name="price" ngModel required />
+          </div>
 
-            <div class=login>
-                <input type="submit" [disabled]="addform.invalid" value="add" />
-            </div>  
-            
-          
-        </div>
+          <div class="form-group custom">
+            <label>Image</label>
+            <input type="text" class="form-control" name="image" [(ngModel)]=image required />
+          </div>
+
+          <div class="form-group custom ">
+            <label>Gender</label>
+            <input type="text" class="form-control" name="gender" ngModel required />
+          </div>
+
+          <div class="form-group custom ">
+            <label>Category</label>
+            <input type="text" class="form-control" name="mainCategory" ngModel required />
+          </div>
+
+          <div>
+            <input type="submit" class="add" [disabled]="addform.invalid" value="Add"  />
+          </div>
+
+
+
+
+
+        </form>
+      </div>
+
+      <div class="col-md-5">
+
+        <img src={{image}} alt="Image Review"/>
+
+      </div>
     </div>
 
-</form>
+  </div>
+
 </div>
+
+
+
+
+
 
 
 <!--<div class="card">
