--- a/src/app/shopcart/shopcart.component.html
+++ b/src/app/shopcart/shopcart.component.html
@@ -49,7 +49,7 @@
     <td>   </td>
     <td>   </td>
     <td>
-    <button type="button" class="btn btn-default">
+    <button type="button" class="btn btn-default" (click)="shopping()">
     <span class="fa fa-shopping-cart"></span> Continue Shopping
     </button></td>
     <td>
