--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -48,8 +48,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a  [routerLink]="['/login']" routerLinkActive="active" class="dropdown-item">Login</a>
-            <a class="dropdown-item" href="#">Logout</a>
-            <a class="dropdown-item" href="#">Orders</a>
+            <a class="dropdown-item" (click)="Logout()">Logout</a>
+            
           </div>
         </li>
        
