--- a/src/app/productcard/productcard.component.html
+++ b/src/app/productcard/productcard.component.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="wrapper">
   <div class="container">
 
@@ -30,4 +30,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
