--- a/src/app/admin3/admin3.component.html
+++ b/src/app/admin3/admin3.component.html
@@ -18,7 +18,7 @@
 
           <div class="form-group custom ">
             <label>Description</label>
-            <input type="text" class="form-control" name="description" ngModel required />
+            <input type="textarea" class="form-control" name="description" ngModel required />
           </div>
 
           <div class="form-group custom ">
