--- a/src/app/admin3/admin3.component.css
+++ b/src/app/admin3/admin3.component.css
@@ -17,6 +17,7 @@ form
     padding: 60px;
     text-align: center;
     background: #66a094;
+    background: rgb(59, 59, 59);
     color: white;
     font-size: 40px;
     font-family: Oswald;
@@ -26,7 +27,7 @@ form
 
 .wrap {
     color: #404E67;
-    background: #000000;
+    background: rgb(223, 212, 212);
     font-family: 'Open Sans', sans-serif;
     height:1000px;
     color: rgb(238, 237, 237);
@@ -49,7 +50,7 @@ form {
     height:50px;
     width:30%;
     margin-top: 5%;
-    background-color:#66a094;
+    background-color:rgb(59, 59, 59);
     border-radius: 50%;
     
     padding: 7px;
