--- a/src/app/adminupdate/adminupdate.component.css
+++ b/src/app/adminupdate/adminupdate.component.css
@@ -2,6 +2,7 @@
     padding: 60px;
     text-align: center;
     background: #66a094;
+    background: rgb(59, 59, 59);
     color: white;
     font-size: 40px;
     font-family: Oswald;
@@ -11,7 +12,7 @@
 
 .wrap {
     color: #404E67;
-    background: #000000;
+    background: rgb(223, 212, 212);
     font-family: 'Open Sans', sans-serif;
     height:1000px;
     color: rgb(238, 237, 237);
@@ -34,7 +35,7 @@ form {
     height:50px;
     width:30%;
     margin-top: 5%;
-    background-color:#66a094;
+    background-color:rgb(59, 59, 59);
     border-radius: 50%;
     padding: 7px;
     color: white;
