image preview and bug fixed

--- a/src/app/admin3/admin3.component.html
+++ b/src/app/admin3/admin3.component.html
@@ -52,11 +52,10 @@
         </form>
       </div>
 
-      <div class="col-md-5">
-
-        <img src={{image}} alt="Image Review"/>
-
-      </div>
+      <div class="previewImage" style="background: url({{image}}) no-repeat center center;background-size:80% 80%;">
+        <img src={{image}}>
+      
+    </div>
     </div>
 
   </div>
