--- a/src/app/adminupdate/adminupdate.component.html
+++ b/src/app/adminupdate/adminupdate.component.html
@@ -55,9 +55,8 @@
 
 
 
-      <div class="col-md-5">
-       
-          <img src={{edit.image}} />
+      <div class="previewImage" style="background: url({{edit.image}}) no-repeat center center;background-size:80% 80%;">
+          <img src={{edit.image}}>
         
       </div>
     </div>
