--- a/src/app/admin3/admin3.component.css
+++ b/src/app/admin3/admin3.component.css
@@ -61,11 +61,13 @@ form {
     
 }
 
+.previewImage{
+    margin-top: 120px;
+    height: 400px;
+    width: 400px;
+}
 
-img{
-    height:60%;
-    width:80%;
-    margin-top: 30%;
-    margin-left: 10%;
-
+.previewImage img{
+    height: 400px;
+    width: 400px;
 }
