--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,8 +29,8 @@
             </a>
 
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a  [routerLink]="['/product/men']" routerLinkActive="active" class="dropdown-item">Men</a>
-                <a  [routerLink]="['/product/women']" routerLinkActive="active" class="dropdown-item">Women</a>
+                <a  [routerLink]="['/product/male']" routerLinkActive="active" class="dropdown-item">Men</a>
+                <a  [routerLink]="['/product/female']" routerLinkActive="active" class="dropdown-item">Women</a>
                 <a  [routerLink]="['/product/kids']" routerLinkActive="active" class="dropdown-item">Kids</a>
 
             
