--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,10 +88,16 @@ orientation="ltr"
 ></mat-carousel-slide>
 </mat-carousel>
 
-<div class="catergoryContainer">    
+<br>
+<br>
+
+<div class="catergoryContainer marg">    
     <div class="custom" >
-        <a  [routerLink]="['/product/women']" routerLinkActive="active" >
-            <img src="https://image.shutterstock.com/image-photo/portrait-cute-little-kids-boy-260nw-1244386753.jpg" class="img-fluid rounded mx-auto d-block"
+        <a  [routerLink]="['/product/kids']" routerLinkActive="active" >
+           <!-- <img src="https://www.babycouture.in/blog/wp-content/uploads/2016/08/Little_girl_shopping.jpg" class="img-fluid rounded mx-auto d-block"
+                >-->
+
+                <img src="https://i.pinimg.com/474x/cd/58/3c/cd583c444f19dbb6038f0a62bd5bc6ff--children-outfits-toddler-outfits.jpg" class="img-fluid rounded mx-auto d-block"
                 >
 
 
@@ -99,24 +105,32 @@ orientation="ltr"
     </div>
 
 
-    <div class="custom" >
-        <a  [routerLink]="['/product/women']" [queryParams]= "{search:'shirt'}"routerLinkActive="active" >
-            <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c2hvcHBpbmd8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" class="img-fluid rounded mx-auto d-block">
 
+    <div class="custom" >
+        <a  [routerLink]="['/product/female']" routerLinkActive="active" >
+           <!-- <img src="https://www.toptrendsguide.com/wp-content/uploads/2020/02/Online-Shopping-Websites.jpg" class="img-fluid rounded mx-auto d-block">-->
+
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlaPr7zYiFXqzpYfM3YspH0wTpgy9gshU-0Q&usqp=CAU" class="img-fluid rounded mx-auto d-block">
 
 
             </a>
             
     </div>
     <div class="custom" >
-        <a  [routerLink]="['/product/men']" routerLinkActive="active" >
+        <a  [routerLink]="['/product/male']" routerLinkActive="active" >
 
-            <img src="https://media.istockphoto.com/photos/the-perfect-outfit-means-a-perfect-day-picture-id890289344?k=6&m=890289344&s=612x612&w=0&h=oury8nRKhxuQa9q3UInH8a4s-nVLqel0gpVr5FRLRZg=" class="img-fluid rounded mx-auto d-block"
+         <!--   <img src="https://nypost.com/wp-content/uploads/sites/2/2018/06/men-shopping-masculine.jpg?quality=80&strip=all"class="img-fluid rounded mx-auto d-block"
+                >-->
+
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRui4_6iSkQZBfE-v7G15bH4CB4DF8nzeTFSg&usqp=CAU"class="img-fluid rounded mx-auto d-block"
                 >
             </a>
     </div>
     </div>
-
+    <br>
+    <br>
+    <br>
+    <br>
 <app-test></app-test>
 <br>
 <br>
