--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,12 +35,11 @@
             <div class="row">
                 <div class="col-xl-4 col-lg-4 mb-50">
                     <div class="footer-widget">
-                        <div class="footer-logo">
+                      <!--  <div class="footer-logo">
                             <a href="index.html"><img src="https://i.ibb.co/QDy827D/ak-logo.png" class="img-fluid" alt="logo"></a>
-                        </div>
+                        </div>-->
                         <div class="footer-text">
-                            <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
-                            elit,Lorem ipsum dolor sit amet.</p>
+                            <p>Myntra is a one stop shop for all your fashion and lifestyle needs. Being India's largest e-commerce store for fashion and lifestyle products, Myntra aims at providing a hassle free and enjoyable shopping experience to shoppers.</p>
                         </div>
                         <div class="footer-social-icon">
                             <span>Follow us</span>
